Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136485

QDockWidgets sends visibilityChanged on destruction

XMLWordPrintable

    • 786959311 (dev), 31f1c78b0 (6.9.1), e30e358ce (6.9), 08511d6b5 (17.0), d6694a9bf (tqtc/lts-6.8), 22591801e (tqtc/lts-6.5)

      Probably since https://codereview.qt-project.org/c/qt/qtbase/+/636265 by mmutz and richard QDockWidget sends visibilityChanged signal on destruction.

      This can lead to crashes in user code when a main widget is supposed to be reacting to changed visibility and e.g. hide/show/modify other data members of same widget.

      This is seen in Okular auto tests as part of the tests for Qt Next.

      There is also a quite small example in

      https://invent.kde.org/sune/windows-test-thingie/-/blob/34f78089876756d1fe662fd7e589da901ba3d6d8/main.cpp

        For Gerrit Dashboard: QTBUG-136485
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            svuorela Sune Vuorela
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: